--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
             id: 'road-layer', type: 'line', source: 'roads', paint: {
                 'line-color': [
                     'case',
-                    ['==', ['get', 'reverse'], true],
+                    ['==', ['get', 'override'], true],
                     '#000000',  // Affiche une flèche vers la gauche si reverse est true
                     '#8e8c8c',   // Sinon, affiche une flèche vers la droite
-                ],                'line-width': 2,
+                ],
+                'line-width': 2,
                 'line-opacity': 1,
             }, layout: {
                 'line-cap': 'round',
@@ -84,7 +85,7 @@
             }, paint: {
                 'text-color': [
                     'case',
-                    ['==', ['get', 'reverse'], true],
+                    ['==', ['get', 'override'], true],
                     '#000000',  // Affiche une flèche vers la gauche si reverse est true
                     '#8e8c8c',   // Sinon, affiche une flèche vers la droite
                 ],
@@ -102,7 +103,20 @@
     });
 
     function toggleDirection(feature, data) {
-        feature.properties.reverse = typeof feature.properties.reverse != 'undefined' ? !feature.properties.reverse : true;
+        feature.properties.override = true;
+        if (typeof feature.properties.oneway == 'undefined' || feature.properties.oneway === "no") {
+            feature.properties.oneway = "yes";
+            feature.properties.reverse = false;
+        }
+        else if (feature.properties.oneway === "yes"
+            && (typeof feature.properties.reverse == 'undefined' || !feature.properties.reverse)) {
+            feature.properties.oneway = "yes";
+            feature.properties.reverse = true;
+        }
+        else if (feature.properties.oneway === "yes" && feature.properties.reverse === true) {
+            feature.properties.oneway = "no";
+            feature.properties.reverse = false;
+        }
         data.features.map(function (elem) {
             if (elem.id === feature.properties["@id"]) {
                 elem.properties = feature.properties;
