--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plan de circulation</title>
-    <link
-            href="https://api.mapbox.com/mapbox-gl-js/v3.3.0/mapbox-gl.css"
-            rel="stylesheet"
-    />
+    <link href="style.css" rel="stylesheet" />
+    <link href="https://api.mapbox.com/mapbox-gl-js/v3.3.0/mapbox-gl.css" rel="stylesheet"/>
     <script src="https://api.mapbox.com/mapbox-gl-js/v3.3.0/mapbox-gl.js"></script>
 
 </head>
