--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,6 @@
     <link href="style.css" rel="stylesheet" />
     <link href="https://api.mapbox.com/mapbox-gl-js/v3.3.0/mapbox-gl.css" rel="stylesheet"/>
     <script src="https://api.mapbox.com/mapbox-gl-js/v3.3.0/mapbox-gl.js"></script>
-
 </head>
 <body>
 
@@ -130,13 +129,22 @@
     }
 
     function toggleDirection(feature, data) {
+        if (typeof feature.properties.oneway === 'undefined') {
+            feature.properties.oneway = "no";
+        }
+        if (typeof feature.properties.reverse === 'undefined') {
+            feature.properties.reverse = false;
+        }
+        if (typeof userChanges[feature.properties['@id']] == 'undefined') {
+            feature.properties.initialoneway = feature.properties.oneway;
+        }
         feature.properties.override = true;
-        if (typeof feature.properties.oneway == 'undefined' || feature.properties.oneway === "no") {
+        if (feature.properties.oneway === "no") {
             feature.properties.oneway = "yes";
             feature.properties.reverse = false;
         }
         else if (feature.properties.oneway === "yes"
-            && (typeof feature.properties.reverse == 'undefined' || !feature.properties.reverse)) {
+            && (!feature.properties.reverse)) {
             feature.properties.oneway = "yes";
             feature.properties.reverse = true;
         }
@@ -145,6 +153,10 @@
             feature.properties.reverse = false;
         }
 
+        if (
+            feature.properties.initialoneway === feature.properties.oneway && feature.properties.reverse === false) {
+            feature.properties.override = false;
+        }
         userChanges[feature.properties['@id']] = feature;
         applyChangeOnFeature(data, feature);
         // Modifier la source avec les nouvelles données
