--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,6 +34,9 @@
     let data = [];
     let userChanges = {};
     async function refreshData() {
+        if (map.getZoom() <= 14) {
+            return;
+        }
         data = await loadGeoJSON(map.getBounds());
         for (const [key, value] of Object.entries(userChanges)) {
             applyChangeOnFeature(data, value);
