--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,20 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plan de circulation</title>
     <link href="style.css" rel="stylesheet" />
-    <link href="https://api.mapbox.com/mapbox-gl-js/v3.3.0/mapbox-gl.css" rel="stylesheet"/>
-    <script src="https://api.mapbox.com/mapbox-gl-js/v3.3.0/mapbox-gl.js"></script>
+    <script src="https://unpkg.com/maplibre-gl@^5.0.0/dist/maplibre-gl.js"></script>
+    <link href="https://unpkg.com/maplibre-gl@^5.0.0/dist/maplibre-gl.css" rel="stylesheet" />
 </head>
 <body>
 
 <div id="map" style="width: 100%; height: 100vh;"></div>
 <script>
-    mapboxgl.accessToken = 'pk.eyJ1IjoicGF1bG9wMzMiLCJhIjoiY2xkcHRjNmZ3MDN3cTNvcDlxeGw3a2RwayJ9.yFjdNuiVuKndIVLwxoxLZA';
-    const map = new mapboxgl.Map({
+    const map = new maplibregl.Map({
         container: 'map', // ID de l'élément HTML où la carte sera rendue
-        style: 'mapbox://styles/mapbox/streets-v11', // Style de carte
-        center: [-0.5670392, 44.82459], // Coordonnées (longitude, latitude) de Paris
+        style: '/assets/style.json', // Style MapLibre (modifiez si besoin)
+        center: [-0.5670392, 44.82459], // Coordonnées (longitude, latitude)
         zoom: 14
     });
+
 
     async function loadGeoJSON(bounds) {
         const url = new URL('http://localhost:8000/api/data');
@@ -97,7 +97,7 @@
                 // 'icon-allow-overlap': true,
                 // 'icon-ignore-placement': true,
                 // 'icon-image': 'arrow',
-                'icon-size': 0.045,
+                'icon-size': 10,
                 'visibility': 'visible'
 
             }, paint: {
