--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,6 +11,7 @@
 <body>
 
 <div id="map" style="width: 100%; height: 100vh;"></div>
+<script src="/config.js"></script>
 <script>
     const map = new maplibregl.Map({
         container: 'map', // ID de l'élément HTML où la carte sera rendue
@@ -21,7 +22,7 @@
 
 
     async function loadGeoJSON(bounds) {
-        const url = new URL('http://localhost:8000/api/data');
+        const url = new URL('/api/data', appConfig.backendUrl);
         url.searchParams.append('min_lon', bounds.getWest());
         url.searchParams.append('min_lat', bounds.getSouth());
         url.searchParams.append('max_lon', bounds.getEast());
