regroupement des variables importantes dans appConfig

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,7 @@
     import { initializeMap } from './map.js';
 
     // Initialisation de la carte
-    const map = initializeMap('map', '/assets/style.json', [-0.5670392, 44.82459], 14);
+    const map = initializeMap('map', '/assets/style.json');
 </script>
 
 </body>
