--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,17 +6,17 @@
     <title>Plan de circulation</title>
     <link href="style.css" rel="stylesheet" />
 <!--    <script src="https://unpkg.com/maplibre-gl@^5.0.0/dist/maplibre-gl.js"></script>-->
-<!--    <link href="https://unpkg.com/maplibre-gl@^5.0.0/dist/maplibre-gl.css" rel="stylesheet" />-->
+    <link href="https://unpkg.com/maplibre-gl@^5.0.0/dist/maplibre-gl.css" rel="stylesheet" />
 </head>
 <body>
 
 <div id="map" style="width: 100%; height: 100vh;"></div>
+<img class="my-0 absolute bottom-0 right-0 z-10" src="assets/img/logo-VC-carte.png" width="75" height="75" alt="logo Vélo-Cité Bordeaux Métropole">
 <script type="module">
     import { initializeMap } from './map.js';
 
     // Initialisation de la carte
     const map = initializeMap('map', '/assets/style.json');
 </script>
-
 </body>
 </html>
